--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,5 @@
 {
   "name": "ionic-app-base",
-  "app_id": "",
-  "type": "vue-vite",
-  "integrations": {}
+  "integrations": {},
+  "type": "vue-vite"
 }
